--- a/devquest-frontend/.gitignore
+++ b/devquest-frontend/.gitignore
@@ -1,5 +1,8 @@
-# Logs
-logs
+# === Node dependencies ===
+node_modules/
+
+# === Logs ===
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,18 +10,31 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# === Build output ===
+.next/
+out/
+dist/
+dist-ssr/
 
-# Editor directories and files
+# === Environment variables ===
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+!.env.example
+
+# === Editor directories and files ===
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# === Misc / cache ===
+*.local
+.cache/
