--- a/devquest-backend/package.json
+++ b/devquest-backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "build": "babel src -d dist"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,9 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "nodemon": "^3.1.10"
   }
 }
