--- a/devquest-frontend/package.json
+++ b/devquest-frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "axios": "^1.6.8",
